ma com template refinements

--- a/css/user.css
+++ b/css/user.css
@@ -1,3 +1,261 @@
+body {
+  background-image: url("https://marielaspoltore.com/images/bg/mscom_bg2.jpeg");
+}
+// HEADER
+.com-content-article ~ h1,
+.com-content-article ~ h2,
+.com-content-article ~ h3,
+.com-content-article ~ h4,
+.com-content-article ~ h5,
+.com-content-article ~ h6,
+.com-content-article__body p h4 {
+  font-family: "Lora", serif !important;
+  font-weight: 500 !important;
+  color: #816170;
+}
+.com-content-article__body > h4 {
+  color: #816170;
+}
+@media all and (min-width: 600px) {
+  .container-component {
+    width: 90% !important;
+    transition: width 0.5s ease-in-out;
+  }
+}
+@media all and (min-width: 800px) {
+  .container-component {
+    width: 80% !important;
+    transition: width 0.5s ease-in-out;
+  }
+}
+@media all and (min-width: 1080px) {
+  .container-component {
+    width: 70% !important;
+    transition: width 0.5s ease-in-out;
+  }
+}
+.head-wrapper {
+  height: 140px;
+  background-color: #f7edef;
+  display: flex;
+  flex-flow: row wrap;
+  text-align: center;
+}
+
+@media all and (max-width: 560px) {
+  .head-wrapper {
+    height: 220px;
+  }
+}
+
+.head-wrapper > * {
+  flex: 1 100%;
+}
+
+.subhead-wrapper {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.above-menu-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  align-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.menu-nav {
+  text-align: left;
+}
+
+.logo {
+  margin: 0 2rem;
+  width: 300px;
+  height: 115px;
+}
+
+@media all and (min-width: 200px) {
+  .aside {
+    flex: 1 0 0;
+  }
+  .logo {
+    order: 1;
+  }
+  .subhead-wrapper {
+    order: 3;
+  }
+  .menu-nav {
+    order: 2;
+  }
+  .above-menu-wrapper {
+    order: 1;
+  }
+}
+
+@media all and (min-width: 800px) {
+  .subhead-wrapper {
+    flex: 3 0px;
+  }
+  .logo {
+    order: 1;
+  }
+  .subhead-wrapper {
+    order: 2;
+  }
+  .menu-nav {
+    flex: 3 0px;
+  }
+  .menu-nav {
+    order: 2;
+  }
+  .above-menu-wrapper {
+    order: 1;
+  }
+}
+
+.container-header {
+  background-image: none;
+  padding-bottom: 1rem;
+  box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+}
+.container-header .navbar-toggler {
+  color: #816170;
+  border: 1px solid #816170;
+}
+.mod-menu_dropdown-metismenu {
+  background-color: #f7edef;
+}
+.container-header .navbar-brand a {
+  color: #816170;
+}
+.metismenu.mod-menu .metismenu-item > a,
+.metismenu.mod-menu .metismenu-item > button,
+.metismenu.mod-menu .metismenu-item > span {
+  text-decoration-color: #816170;
+}
+.container-header .mod-menu > li > a,
+.container-header .mod-menu > li > span {
+  color: #816170;
+  text-decoration-color: #816170;
+}
+.metismenu.mod-menu .mm-toggler {
+  color: #816170;
+}
+.container-header .metismenu > li.active > a:after,
+.container-header .metismenu > li.active > button:before,
+.container-header .metismenu > li > a:hover:after,
+.container-header .metismenu > li > button:hover:before {
+  text-decoration: none;
+  right: 0;
+  left: 0;
+  background: #46353d;
+}
+.metismenu.mod-menu .mm-collapse {
+  background-color: #f7edef;
+}
+
+.mm-collapse > .level-2 > a {
+  padding: 4px;
+  text-decoration: none;
+}
+
+.mm-collapse > .level-2 > a:hover {
+  background-color: #eed3d4;
+  padding: 4px;
+  width: 100%;
+  height: auto;
+}
+
+.mod-breadcrumbs__wrapper {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem;
+  color: #cb7c95;
+  background-color: #f7edef;
+  box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+}
+.mod-breadcrumbs__wrapper ol {
+  border-radius: 4px;
+}
+.fields-container {
+  list-style: none;
+}
+
+.content-links > ul {
+  list-style: url("https://marielaspoltore.com/images/svg/external-link.svg");
+}
+
+ul {
+  list-style: url("https://marielaspoltore.com/images/svg/flower.svg");
+}
+.page-item.active .page-link {
+  color: #816170;
+}
+.page-header h1,
+.page-header h2,
+.page-header h3,
+.page-header h1 a,
+.page-header h2 a,
+.page-header h3 a {
+  font-family: "Lora", serif !important;
+  font-weight: 500;
+  color: #816170;
+}
+.readmore + .fields-container {
+  display: none;
+}
+.item-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+.extra-space {
+  padding-right: 1px;
+}
+a:not([class]) {
+  text-decoration: none;
+}
+
+.card {
+  border: none;
+}
+.main-top > .card-body {
+  padding: 0;
+}
+.footer {
+  box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+}
+.footer > .grid-child {
+  flex-direction: column;
+}
+.main-bottom {
+  margin-top: 1rem !important;
+}
+.com-content-article,
+.com-content-category-blog__item,
+.card,
+.items-more {
+  background-color: #fff;
+  padding: 1rem !important;
+  border-radius: 8px;
+  box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+}
+.com-content-category-blog {
+  background-color: #cb7c95;
+  padding: 1rem !important;
+  border-radius: 8px;
+  box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, 0.25);
+}
+
+.container-component > * + *,
+.container-component > :first-child,
+.container-sidebar-left > * + *,
+.container-sidebar-left > :first-child,
+.container-sidebar-right > * + *,
+.container-sidebar-right > :first-child {
+  margin-top: 0;
+}
 .byhand {
   font-family: "Allura", cursive;
   font-size: 2rem;
@@ -49,12 +307,15 @@
 */
 
 .therapies_title {
+  font-family: "Lora", serif;
   text-align: center;
   padding-bottom: 48px;
+  color: #816170;
 }
 
 .therapies_wrapper {
   padding: 48px 0 48px 0;
+  width: 100vw;
   background-color: #f7edef;
 }
 
@@ -65,6 +326,8 @@
   /* flex-flow: column nowrap; */
   text-align: center;
   justify-content: space-around;
+  align-items: center;
+  align-content: center;
 }
 
 .therapies_item {
@@ -91,9 +354,10 @@
 }
 
 .therapies_text {
+  font-family: "Montserrat", sans-serif;
   position: absolute;
   top: 150px;
-  margin-left: -200px;
+  margin-left: -75px;
   width: 150px;
   color: transparent;
   background-color: transparent;
@@ -109,6 +373,22 @@
   border-color: rgba(203, 124, 149, 0.4);
   border-radius: 8px;
   transition: all 0.7s 0.3s ease-out;
+}
+
+@media all and (max-width: 780px) {
+  .therapies_item .therapies_text {
+    top: 250px;
+    color: #231a1e;
+    background-color: rgba(203, 124, 149, 0.4);
+    border-color: rgba(203, 124, 149, 0.4);
+    border-radius: 8px;
+    transition: all 0.7s 0.3s ease-out;
+  }
+}
+@media all and (max-width: 780px) {
+  .therapies_flex {
+    justify-content: center;
+  }
 }
 /*!
  * Videos Flexbox addition
@@ -243,14 +523,12 @@
 }
 
 /* Testimonial Style */
-.testimonial-title {
-  margin-bottom: 120px;
-}
-
 .testimonial-title h2 {
+  padding-top: 4rem;
+  font-family: "Lora", serif;
   letter-spacing: 3px;
   text-align: center;
-  color: #eed3d4;
+  color: #46353d;
 }
 
 .testimonial-image-container {
@@ -258,10 +536,9 @@
 }
 
 .testimonial-image {
-  left: 50%;
-  margin-left: -75px;
-  margin-top: -120px;
   position: absolute;
+  top: -130px;
+  left: calc((100% - 150px) / 2);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 150px;
   height: 150px;
@@ -272,7 +549,9 @@
   margin-top: 28px;
   width: 60px;
 }
-
+.testimonial-wrapper {
+  background-color: #816170;
+}
 .testimonial-container {
   --gap: 20px;
   background-color: #816170;
@@ -283,45 +562,52 @@
   /*align-items: flex-start;*/
   /*align-content: space-evenly;*/
   /* display: inline-flex; */
-  margin: calc(-1 * var(--gap)) 0 120px calc(-1 * var(--gap));
-  width: calc(100% + var(--gap));
+  margin: calc(-1 * ((100vw - (100% + 2 * (var(--gap)))) / 2)) 0 0
+    calc(-1 * ((100vw - (100% + 2 * (var(--gap)))) / 2) - (var(--gap)));
+  width: 100vw;
+  padding: 120px 80px 80px 80px;
 }
 
 .testimonial-container > * {
-  margin: var(--gap) 0 120px var(--gap);
+  margin: var(--gap) 0 0 var(--gap);
 }
 
 .testimonial-item {
   border-radius: 8px;
-  width: 240px;
+  width: 30%;
   /* margin: 10px; */
   background-color: #f7edef;
   text-align: center;
-  padding: 64px 48px;
+  padding: 16px 32px;
   margin-bottom: 60px;
 }
 
-@media (max-width: 748px) {
+@media (max-width: 1063px) {
   .testimonial-item {
+    padding: 64px 32px;
     width: 100%;
+  }
+  .testimonial-container {
+    --gap: 1px;
+    padding: 80px 40px 40px 40px;
   }
 }
 
 @media (min-width: 1064px) {
   .testimonial-item {
-    padding: 16px 48px;
+    padding: 16px 32px;
     margin-bottom: 0;
   }
 }
-
 .testimonial-item p {
+  position: relative;
   font-size: 16px;
   color: #231a1e;
   text-align: justify;
 }
 
 .testimonial-byhand {
-  padding: 28px 0 12px 0;
+  padding: 1rem 0 0 0;
   color: #816170;
 }
 
@@ -332,7 +618,7 @@
 }
 
 .testimonial-icon {
-  padding: 20px 0 0 0;
+  margin-bottom: 2rem;
   color: #816170;
 }
 
@@ -342,7 +628,7 @@
 }
 /* Testimonial Horizontal */
 .test-hor__title {
-  margin-bottom: 8px;
+  margin-bottom: 60px;
 }
 
 .test-hor__title h2 {
@@ -469,11 +755,15 @@
 }
 /* About Me Section */
 .about-me_title {
-  margin-right: 60px;
+  color: #816170;
+  text-align: center;
+  font-family: "Lora", serif;
+  margin-top: 2rem;
 }
 
 .about-me_body {
-  margin: 20px;
+  background-color: #eed3d4;
+  position: relative;
   padding: 20px 0;
 }
 
@@ -482,6 +772,9 @@
   display: flex;
   flex-flow: row wrap;
   text-align: center;
+  align-items: flex-start;
+  align-content: flex-start;
+  margin: 1rem 0 0 0;
 }
 
 .about-me_container > * {
@@ -532,27 +825,36 @@
 
 @media all and (min-width: 320px) {
   .about-me_image {
-    width: 240px;
+    width: 180px;
   }
 }
 
 @media all and (min-width: 420px) {
   .about-me_image {
-    width: 360px;
+    width: 180px;
   }
 }
 
 @media all and (min-width: 600px) {
+  .about-me_title {
+    margin-top: 0;
+  }
+  .about-me_container {
+    margin: 1rem 0 0 0;
+  }
   .about-me_item {
     flex: 1 0 0;
   }
 
   .about-me_image {
-    width: 360px;
+    width: 180px;
   }
 }
 
 @media all and (min-width: 800px) {
+  .about-me_container {
+    margin: 1rem 5% 0 5%;
+  }
   .about-me_item_2 {
     flex: 3 0px;
   }
@@ -571,6 +873,9 @@
 }
 
 @media all and (min-width: 1080px) {
+  .about-me_container {
+    margin: 1rem 15% 0 15%;
+  }
   .about-me_image {
     width: 240px;
   }
@@ -611,7 +916,7 @@
 }
 
 .flower_heading {
-  position: relative;
+  width: 100%;
 }
 
 .flower_heading h2 {
@@ -620,20 +925,26 @@
 
 .flower_image_corner {
   position: absolute;
-  right: 0px;
-  top: 0px;
+  right: -20px;
+  top: -20px;
   width: 90px;
 }
 
 .flower_chain_top {
   position: relative;
-  z-index: 90;
 }
 
 .flower_image_top {
   position: absolute;
-  bottom: -90px;
-  left: 30px;
+  bottom: -60px;
+  left: 7%;
+  width: 200px;
+}
+
+.flower_image_2 {
+  position: absolute;
+  bottom: -80px;
+  right: 5%;
   width: 200px;
 }
 
@@ -695,8 +1006,9 @@
 }
 
 .social_wrapper {
-  position: relative;
-  z-index: 2000;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .social_icon {
@@ -709,28 +1021,42 @@
   color: #46353d;
 }
 
-.social_icons {
-  position: absolute;
-  top: -150px;
-  right: 80px;
-}
-
-@media (min-width: 980px) {
-  .social_icons {
-    top: -90px;
-    right: 40px;
-  }
-}
-
 /* End of Social Icons */
 /* Footer */
+.footer-logo {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+}
+
+.footer-logo img {
+  margin-bottom: 1rem;
+}
+
+.footer-logo div {
+  font-size: 0.8rem;
+  color: #46353d;
+  font-weight: bold;
+}
+
 .footer__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  gap: 2rem;
   font-size: 12px;
   text-align: center;
   color: #816170;
+}
+@media all and (max-width: 981px) {
+  .footer__wrapper :nth-child(1) {
+    order: 2;
+  }
+  .footer__wrapper :nth-child(2) {
+    order: 1;
+  }
+  .footer__wrapper :nth-child(3) {
+    order: 3;
+  }
 }
 /* start of HikaShop Adaptations */
 .hikashop_product_price {
